2012-08-23  6.7.9-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-1, SVN revision 9089.

2012-08-22  6.7.9-1 Glenn Randers-Pehrson <glennrp@image...>
  * The gAMA chunk with gamma==1.0 was ignored while deciding whether to set
    the image colorspace to GRAY when reading grayscale PNG images.

2012-08-16  6.7.9-1 Cristy  <quetzlzacatenango@image...>
  * Adjust scaling for Luv colorspace conversion (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21664).
  * Copy alpha channel of the -median option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21694).
  * Don't add matte channel for -coalesce if input images don't have one.
  * Prevent memory leak in ImageToBlob() if image write fails.
  * In rare cases, label would not auto-size properly (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21716).
  * Identify command now reports the image colorspace for non-verbose results.
  * Account for stroke width when rendering a caption (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=21721).

2012-08-15  6.7.9-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-0, SVN revision 8970.

2012-08-14  6.7.9-0 Cristy  <quetzlzacatenango@image...>
  * RGB -> HCL, return correct hue when g < b < r (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21646).
  * Prefer inkscape for best SVG compliance.
  * HCL -> RGB conversion enhancement (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21663).
  * Utilize inkscape if it is in your execution path otherwise RSVG.  If
    neither is available, revert to the internal SVG renderer.

2012-08-12  6.7.8-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-10, SVN revision 8915.

2012-08-10  6.7.8-9 Cristy  <quetzlzacatenango@image...>
  * Respect the image mask for option -selective-blur (reference