@@ -9,8 +9,8 @@
   <configure name="NAME" value="ImageMagick"/>
   <configure name="VERSION" value="6.7.9"/>
   <configure name="LIB_VERSION" value="0x679"/>
-  <configure name="LIB_VERSION_NUMBER" value="6,7,9,2"/>
-  <configure name="SVN_REVISION" value="9079:9093M" />
+  <configure name="LIB_VERSION_NUMBER" value="6,7,9,1"/>
+  <configure name="SVN_REVISION" value="9079:9094M" />
   <configure name="RELEASE_DATE" value="2012-08-23"/>
   <configure name="CONFIGURE" value="./configure "/>
   <configure name="PREFIX" value="/usr/local"/>
