@@ -1318,7 +1318,7 @@
 
 /* Define to the full name and version of this package. */
 #ifndef MAGICKCORE_PACKAGE_STRING
-#define MAGICKCORE_PACKAGE_STRING "ImageMagick 6.7.9-2"
+#define MAGICKCORE_PACKAGE_STRING "ImageMagick 6.7.9-1"
 #endif
 
 /* Define to the one symbol short name of this package. */
@@ -1333,7 +1333,7 @@
 
 /* Define to the version of this package. */
 #ifndef MAGICKCORE_PACKAGE_VERSION
-#define MAGICKCORE_PACKAGE_VERSION "6.7.9-2"
+#define MAGICKCORE_PACKAGE_VERSION "6.7.9-1"
 #endif
 
 /* Define if you have PANGOCAIRO library */
@@ -1523,7 +1523,7 @@
 
 /* Version number of package */
 #ifndef MAGICKCORE_VERSION
-#define MAGICKCORE_VERSION "6.7.9-2"
+#define MAGICKCORE_VERSION "6.7.9-1"
 #endif
 
 /* Define if you have WEBP library */
